feat(setup): created the js file and added a text file with a dictionary of words

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <!-- Style CSS -->
     <link href="css/style.css" rel = "stylesheet">
 
-    <title>Hello, world!</title>
+    <!-- Script JS -->
+    <script src="/js/main.js" defer></script>
+
+    <title>Boggle</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
 
 
 
