feat(wordScore & validWord): Connected the two functions into the logic of the code so it executes when event is mouseup or when mouse moves out the boggle box

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       </div>
       <div class="row">
         <div class="col">
-          <h2>Word Bank: <span id="wordBank"></span></h2>
+          <h2>Word Bank:</h2>
+          <h4><span id="wordBank"></span></h4>
         </div>
         <div class="col text-end">
           <button id="reset">Reset Game</button>
