feat(modal): Added the modal to html and added the necessary logic in js to pop up when timer runs out

--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
       </div>
     </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog modal-dialog-centered">
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Game Over!</h4>
-        </div>
-        <div class="modal-body">
-          <p>Your final score was: <span id = "finalScore"></span> pts</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Game Over!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="reset2"></button>
       </div>
-      
+      <div class="modal-body">
+        <h5>Your final score was <span id="finalScore"></span> pts!!</h5>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="reset1">Close</button>
+        
+      </div>
     </div>
   </div>
+</div>
 
 
 
