feat(rotate): added the ability to rotate boggle board but issues are found

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="col">
           <h2>Score: <span id="score"></span></h2>
         </div>
+        <div class="col text-center">
+          <button id="rotate">Rotate</button>
+        </div>
         <div class="col text-end">
           <h2>Timer: <span id="time"></span></h2>
         </div>
