--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Smooch&display=swap" rel="stylesheet">
+
     <!-- Style CSS -->
     <link href="css/style.css" rel = "stylesheet">
 
@@ -18,21 +23,21 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row text-center">
-        <h1>Boggle</h1>
+      <div class="row text-center pb-5">
+        <h1 class="header">Boggle</h1>
       </div>
       <div class="row">
         <div class="col">
           <h2>Score: <span id="score"></span></h2>
         </div>
         <div class="col text-center">
-          <button id="rotate">Rotate</button>
+          <button class="btn btn-outline-dark" id="rotate">Rotate</button>
         </div>
         <div class="col text-end">
           <h2>Timer: <span id="time"></span></h2>
         </div>
       </div>
-      <div class="row">
+      <div class="row pt-4">
         <div class="col d-flex justify-content-center">
           <!-- This is where the board is loaded onto -->
           <div class="box" id="boggleBoard">
@@ -46,7 +51,7 @@
           <h4><span id="wordBank"></span></h4>
         </div>
         <div class="col text-end">
-          <button id="reset">Reset Game</button>
+          <button class="btn btn-outline-dark" id="reset">Reset Game</button>
         </div>
       </div>
     </div>
