feat(dictionary): Converted text file into an array

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="css/style.css" rel = "stylesheet">
 
     <!-- Script JS -->
+    <script src="/js/dictionary.js" defer></script>
     <script src="/js/main.js" defer></script>
 
     <title>Boggle</title>
